# votoclaro

./: .env.example  .gitignore  CLAUDE.md  Makefile  docker-compose.yml
.beads/: .migration-hint-ts  config.yaml  issues.jsonl
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  main.py  middleware.py
backend/app/api/: __init__.py  auth.py  candidates.py  mi_voto.py  notifications.py  og.py  parties.py  quiz.py  regions.py  router.py  share.py  simulator.py  trends.py
backend/app/data/: __init__.py  candidates.py  parties.py  polling_data.py  quiz_questions.py  regions.py  shareable_facts.py  spicy_filters.py
backend/app/models/: __init__.py  candidate.py  party.py  poll.py  region.py  user.py  vote_preference.py
backend/app/schemas/: __init__.py  candidate.py  party.py  quiz.py  region.py  simulator.py  user.py
backend/app/services/: __init__.py  anti_vote.py  controversy.py  dhondt.py  notifications.py  og_image.py  quiz.py  web_push.py
backend/app/tasks/: __init__.py  recalculate.py
backend/scrapers/: README.md  __init__.py  build_app_data.py  congreso_scraper.py  convoca_spider.py  import_candidates.py  import_votaciones.py  jne_scraper.py  load_to_app.py  merge_data.py  parse_congreso_pdf.py
backend/scrapers/schemas/: congreso_votaciones.json  convoca_investigaciones.json  voto_informado.json
backend/tests/: __init__.py  conftest.py  test_anti_vote.py  test_dhondt.py  test_quiz.py
frontend/: eslint.config.mjs  next.config.ts  package-lock.json  (+1 more)
(+30 files in other folders)
